--- a/style.css
+++ b/style.css
@@ -1,28 +1,47 @@
-.headLine{
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
+.headLine {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
 }
-.menus{
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    border-top:1px solid #ebebeb;
-    border-bottom:4px double black;
+.menus {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-top: 1px solid #ebebeb;
+  border-bottom: 4px double black;
 }
-.menus button{
-    border: none;
-    background: none;
-    margin: 5px;
+.menus button {
+  border: none;
+  background: none;
+  margin: 5px;
 }
-.menus button :hover{
-    background-color: beige;
+.menus button :hover {
+  background-color: beige;
 }
-.newsImageSize{
-    max-width: 100%;
-    max-height: 250px;
+.newsImageSize {
+  max-width: 100%;
+  max-height: 250px;
+  margin-right: 1em;
+  text-align: center;
 }
-.news{
-    border-bottom: 2px solid black;
+.news {
+  display: flex;
+  padding: 1em;
+  border-bottom: 2px solid black;
+}
+.title {
+  font-size: 20pt;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  margin-top: 2em;
+}
+.title:hover {
+  text-decoration: underline;
+  color: blue;
+}
+.paginationForm {
+  display: flex;
+  justify-content: center;
 }
