--- a/style.css
+++ b/style.css
@@ -43,5 +43,21 @@
 }
 .paginationForm {
   display: flex;
+  margin-top: 10px;
   justify-content: center;
+}
+#inputArea{
+    margin-top: 10px;
+}
+#searchButton {
+  background-color: rgb(86, 123, 149);
+  border: 1px solid rgb(50, 104, 145);
+  color: rgb(255, 255, 255);
+  height: 33px;
+  border-radius: 3px;
+}
+#searchInput {
+  border: 1px solid rgb(226, 226, 226);
+  border-radius: 3px;
+  height: 33px;
 }
